--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Meta tag para verificação do Google Search Console -->
-  <meta name="google-site-verification" content="google794ab04172d82802" />
+  <meta name="google-site-verification" content="EITaK2nLCF2E0buaZDnRf3TepK0l4ztZlnMZ_TjuoiY" />
   <title>Turismo LGBTQIA+ em São Paulo</title>
   <style>
     body {
@@ -65,5 +65,4 @@
 </body>
 </html>
 
-  </section>
 
